NetBSD Problem Report #39923

From www@NetBSD.org  Fri Nov 14 18:51:13 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 9173863B978
	for <gnats-bugs@gnats.netbsd.org>; Fri, 14 Nov 2008 18:51:13 +0000 (UTC)
Message-Id: <20081114185113.6463863B966@narn.NetBSD.org>
Date: Fri, 14 Nov 2008 18:51:13 +0000 (UTC)
From: uwe@netbsd.org
Reply-To: uwe@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: trek(6) can spin, consuming 100% CPU on powerpc
X-Send-Pr-Version: www-1.0

>Number:         39923
>Category:       bin
>Synopsis:       trek(6) can spin, consuming 100% CPU on powerpc
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 14 18:55:01 +0000 2008
>Closed-Date:    Sun Nov 16 01:00:03 +0000 2008
>Last-Modified:  Sun Nov 16 01:00:03 +0000 2008
>Originator:     Valery Ushakov
>Release:        NetBSD 4.0
>Organization:
>Environment:
NetBSD bigmac 4.0_STABLE NetBSD 4.0_STABLE (BIGMAC4) #1: Fri Feb  1 06:31:56 MSK 2008  toor@bigmac:/export/netbsd/cvs/src-release-4/sys/arch/macppc/compile/BIGMAC4 macppc

>Description:
trek(6) would sometimes spin, consuming 100% CPU.  Details can be found
in the Debian bug report:

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=234448

>How-To-Repeat:
Try to play trek on a powerpc machine.  Move around to different quadrants.

>Fix:
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=234448 has a sugested fix.

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39923 CVS commit: src/games/trek
Date: Fri, 14 Nov 2008 21:10:44 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Fri Nov 14 21:10:44 UTC 2008

 Modified Files:
 	src/games/trek: setup.c

 Log Message:
 PR/39923: Valery Ushakov: trek(6) can spin, consuming 100% CPU on powerpc
 On systems where char is unsigned the number of black holes can end up being
 very large (instead of negative).


 To generate a diff of this commit:
 cvs rdiff -r1.8 -r1.9 src/games/trek/setup.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Sat, 15 Nov 2008 20:00:03 -0500
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.