PR/39923: Valery Ushakov: trek(6) can spin, consuming 100% CPU on powerpc On systems where char is unsigned the number of black holes can end up being very large (instead of negative).